[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
  "src/tests"
]

[stac-utils-python.optional-dependencies]
browser = [
  "selenium >= 4.3",
  "pandas >= 1.4",
  "undetected_chromedriver",
  "webdriver-manager >= 3.8"
]
