[metadata]
name = stac-utils-python
version = 0.0.3
author = Micheál Keane
author_email = micheal@staclabs.io
description = Stac Labs python utilities
keywords = python, stac labs
classifiers = 
  Development Status :: 3 - Alpha
  Programming Language :: Python :: 3
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows

[options]
package_dir=
  =src

install_requires =
  boto3
  botocore
  google-cloud-storage
  google-cloud-bigquery
  google-auth-httplib2
  google-auth-oauthlib
  google-api-python-client
  requests

[options.extras_require]
browser =
  selenium >= 4.3
  pandas >= 1.4
  undetected_chromedriver
  webdriver-manager >= 3.8

[options.packages.find]
where=src