[metadata]
name = stac-utils-python
version = 0.2.1
author = Micheál Keane
author_email = micheal@staclabs.io
description = Stac Labs python utilities
keywords = python, stac labs
classifiers = 
  Development Status :: 3 - Alpha
  Programming Language :: Python :: 3
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows

[options]
package_dir =
  =src
install_requires =
  boto3
  botocore
  google-cloud-storage
  google-cloud-bigquery
  google-auth-httplib2
  google-auth-oauthlib
  google-api-python-client
  inflection
  requests
  email-validator
  xmltodict

[options.extras_require]
browser =
  selenium
  pandas
  webdriver-manager

[options.packages.find]
where = src

[coverage:run]
branch = True

[coverage:report]
show_missing = True
